fix(layout): some bad template mojo rectified

--- a/page-code.hbs
+++ b/page-code.hbs
@@ -11,11 +11,11 @@
 
 <div class="lane">
   <div class="panel">
-    <h2>Posts on writing</h2>
+    <h2>Posts on code</h2>
     <div class="grid grid--big">
-      {{#get "posts" filter="tag:write" limit="9" include="tags,authors" as |post|}}
+      {{#get "posts" filter="tag:code" limit="9" include="tags,authors" as |post|}}
       {{#post}}
-      {{> card-write}}
+      {{> card-code}}
       {{/post}}
       {{/get}}
     </div>
